devdog_val.ringer1@gmail.com/src/objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description name for merchandise. This is a required field.</description>
        <inlineHelpText>Use up to 255 characters.</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price of merchandise.</description>
        <inlineHelpText>Price of merchandise in 16 digits, and 2 decimal format.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Price__c</fullName>
        <description>Stock price of merchandise.</description>
        <inlineHelpText>Stock price of merchandise.</inlineHelpText>
        <label>Stock Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Inventory__c</fullName>
        <label>Total Inventory</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>